--- a/basedistante/app/src/main/res/layout/activity_produits.xml
+++ b/basedistante/app/src/main/res/layout/activity_produits.xml
@@ -5,11 +5,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="15dp"
     tools:context=".ProduitsActivity">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Liste des Produits" />
+        android:background="#03A9F4"
+        android:gravity="center_horizontal"
+        android:text="Détails produits"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Désignation" />
+
+        <EditText
+            android:id="@+id/txtDesignation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnInsererProduit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Insérer produit" />
+
+    <Button
+        android:id="@+id/btnListeProduits"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Liste Produits" />
+
+    <TextView
+        android:id="@+id/txtListeProduits"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="#FFC107" />
+
+    <ListView
+        android:id="@+id/lsvListeProduits"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
